# rsorth

./: Cargo.toml  README.md  Taskfile.yml
src/: lib.rs  main.rs  test_spawn.rs
src/lang/: code.rs  compilation.rs  mod.rs  source_buffer.rs  tokenizing.rs
src/runtime/: error.rs  mod.rs
src/runtime/built_ins/: ffi_words.rs  io_words.rs  mod.rs  raw_ipcstream_test.rs  user_words.rs
src/runtime/built_ins/base_words/: array_words.rs  byte_buffer_words.rs  bytecode_words.rs  constant_words.rs  data_structure_words.rs  hash_table_words.rs  math_logic_and_bit_words.rs  mod.rs  simple_arithmetic_words.rs  sorth_words.rs  stack_words.rs  string_words.rs  value_type_words.rs  word_creation_words.rs  word_words.rs
src/runtime/built_ins/terminal_words/: mod.rs  unix.rs  windows.rs
src/runtime/data_structures/: byte_buffer.rs  contextual_data.rs  contextual_list.rs  data_object.rs  dictionary.rs  mod.rs  value.rs  value_hash.rs  value_vec.rs
src/runtime/interpreter/: mod.rs  sorth_interpreter.rs
std/: ffi_minimal_test.f  ffi_test.f  ms.f  publisher.f  subscriber.f
tests/: forth_rs_compat_tests.rs  forth_rs_param_tests.rs  iceoryx2_pubsub.rs  integration_scripts.rs  iox_pub.f  iox_pubsub.f  iox_pubsub.rs  iox_pubsub_driver.f  iox_sub.f  process_spawn.rs  test_ffi_lib.cpp
